# vcr-demo

./: .gitignore  README.md  generation_of_test_file.py  main.py  models.py  pyproject.toml
resources/project_to_test/: fibonacci.py  pyproject.toml
tests/: conftest.py  test_generation_of_test_file.py
tests/cassettes/test_generation_of_test_file/: test_generate_test_file.yaml  test_generate_test_file_should_generate_a_working_test_file_with_ollama.yaml  test_generate_test_file_should_generate_a_working_test_file_with_openai.yaml
